--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,12 @@
 		{% endblock %}
 	{% block content %}
 	<div class="container">
+		{% for message in get_flashed_messages() %}
+		<div class="alert alert-success">
+			<button type="button" class="close" data-dismiss="alert">&times;</button>
+			{{ message }}
+		</div>
+		{% endfor %}
 		{% block pagename %}
 		{% endblock %}
 		{% block data %}
