--- a/templates/playlist.html
+++ b/templates/playlist.html
@@ -5,13 +5,8 @@
 		<div class="col-md-6">
 			<h1>{{ name }}</h1>
 			<p>Enter a name to save new playlist:</p>
-			<form class="form-inline">
-				<div class="form-group">
-					<label class="sr-only" for="new-name"></label>
-					<input type="new-name" class="form-control" id="new-name" placeholder="Shuffled {{ name }}">
-				</div>
-				<button type="submit" class="btn btn-primary">Save Playlist</button>
-			</form>
+			{% import "bootstrap/wtf.html" as wtf %}
+			{{ wtf.quick_form(form) }}
 		</div>
 		<div class="col-md-6">
 			<img src={{ images[1].url }}></img>
@@ -20,7 +15,6 @@
 </div>
 {% endblock %}
 {% block data %}
-<!-- Columns are always 50% wide, on mobile and desktop -->
 <div class="row">
   <div class="col-md-6">
 			<h3>Original Playlist</h3>
